--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,8 +1,14 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/jquery.tagsinput-revisited.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
+    <script src="/static/js/jquery.tagsinput-revisited.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+        integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -10,25 +16,16 @@
         <p>Project Name: {{ name }}</p>
         <p>Student Name: ({{ netid }})</p>
     </div>
-    <form class="form-inline global-search">
+    <form class="form-inline global-search" id="flavor-form" method="GET" action="/search">
         <h1 style="font-size: 55px; font-family:Futura; color: #4285F4">
             Check your favorite wine flavors
         </h1>
 
         <br><br>
 
-        <div class="form-group" id="flavor_form">
-            <input id="flavor" type="checkbox" name="dry"> Dry
-            <input id="flavor" type="checkbox" name="sweet"> Sweet
-            <input id="flavor" type="checkbox" name="acidic"> Acidic
-            <input id="flavor" type="checkbox" name="spice"> Spice
-            <input id="flavor" type="checkbox" name="fruit"> Fruit
-            <input id="flavor" type="checkbox" name="vanilla"> Vanilla
-            <input id="flavor" type="checkbox" name="ripe"> Ripe
-            <input id="flavor" type="checkbox" name="earthy"> Earthy
-        </div>
-        <button type="submit" onclick="getQuery()" class="btn btn-info"> Go! </button>
-        <input type="hidden" id="query" name="search" value=[]>
+        <label for="flavors">Wine Flavor Preferences: </label>
+        <input id="flavors" name="flavors" type="text">
+        <button type="submit" class="btn btn-info"> Go! </button>
     </form>
     <form class="form-inline global-search">
         {% if data %}
@@ -40,17 +37,24 @@
         {% endif %}
     </form>
     <script>
-        function getQuery() {
-            let all = document.querySelectorAll('div#flavor_form input[type=checkbox]');
-            let query = [];
-            [...all].forEach(element => {
-                let name = element.name;
-                if (element.checked) {
-                    query.push(name);
-                }
-            });
-            document.getElementById("query").value = query;
-        }
+        const availableFlavors = [
+            "Dry",
+            "Sweet",
+            "Acidic",
+            "Spice",
+            "Fruit",
+            "Vanilla",
+            "Ripe",
+            "Earthy"
+        ];
+        $("#flavors").tagsInput({
+            'autocomplete': {
+                source: availableFlavors
+            }
+        });
+
+
+
     </script>
 </body>
 
