--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -18,16 +18,16 @@
     </div>
     <form class="form-inline global-search" id="flavor-form" method="GET" action="/search">
         <h1 style="font-size: 55px; font-family:Futura; color: rgb(163, 13, 13)">
-            Travel by Wine 
+            Travel by Wine
         </h1>
         <br><br>
-        <h2 style = "font-size: 20px; font-family:Futura; color: rgb(227, 98, 126)">
-            Based on your flavor preferences, we will suggest travel destinations based on the wine in that region     
+        <h2 style="font-size: 20px; font-family:Futura; color: rgb(227, 98, 126)">
+            Based on your flavor preferences, we will suggest travel destinations based on the wine in that region
         </h2>
 
         <br><br>
 
-        <label for="flavors">Input your Favorite Flavors: </label>
+        <label for="flavors">Input your favorite wine characteristics: </label>
         <input id="flavors" name="flavors" type="text">
         <button type="submit" class="btn btn-info"> Go! </button>
     </form>
