--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,38 +1,64 @@
-@media (min-width: 1200px) {
-.container {
-    max-width: 970px;
-}
+/* @media (min-width: 1200px) {
+
 }
 @media (min-width:400px){
-.global-search {
-padding: 20px 0;
-text-align:center;
-}
+
+} */
 body {
-padding-top: 15%;
 padding-bottom: 15px;
 }
-.global-search {
-text-align:center;
-padding:10px;
-}
-.global-search .form-control {
-width:500px;
-}
-.global-search * {
-display:inline-block;
-margin-bottom:0;
-}
-}
-.topcorner{
+
+.bottomcorner{
 position:absolute;
-top:2%;
+bottom:2%;
 right:2%;
 }
 .btn{
 background-color: #4285F4;
 border: none
 }
-.step-links a{
-color: #4285F4;
+
+.main-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
+    padding: 20px;
 }
+
+.header{
+    height: 350px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url("/static/images/plane_wine.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 5%;
+}
+
+.subheader{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+#flavor-form{
+    text-align: left;
+    width: 100%;
+    padding-left: 10rem;
+    padding-right: 10rem;
+}
+
+.item-label {
+    float: left;
+}
+
+.item-input {
+    overflow: hidden;
+    display: block;
+    padding: 0 4px 0 10px
+}
+
+
+
