--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -5,14 +5,17 @@
 
 } */
 body {
-padding-bottom: 15px;
+padding-bottom: 2px;
 }
 
-.bottomcorner{
-position:absolute;
-bottom:2%;
-right:2%;
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: black;
+  text-align: center;
 }
+
 .btn{
 background-color: #4285F4;
 border: none
@@ -31,7 +34,7 @@ border: none
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url("/static/images/plane_wine.png");
+    background-image: url("/static/images/plane_wine2.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -46,18 +49,38 @@ border: none
 #flavor-form{
     text-align: left;
     width: 100%;
-    padding-left: 10rem;
-    padding-right: 10rem;
+    padding-left: 20rem;
+    padding-right: 20rem;
 }
 
 .item-label {
     float: left;
+    padding-bottom: 2rem;
+    font-size: 2rem;
+    padding-top: 4px;
 }
 
 .item-input {
     overflow: hidden;
     display: block;
-    padding: 0 4px 0 10px
+    padding-left: 2rem;
+    padding-bottom: 3rem;
+}
+
+.tagsinput {
+    border-bottom: 1px solid gray !important;
+    border-top: none !important;
+    border-left: none !important;
+    border-right: none !important;
+}
+
+.tagsinput input:focus{
+    border: none !important;
+}
+
+#country-picker {
+    overflow: inherit;
+    padding-left: 30rem;
 }
 
 
