--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -8,7 +8,6 @@ body {
 padding-bottom: 2px;
 display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
 footer{
@@ -50,12 +49,6 @@ border: none
     align-items: center;
     text-align: center;
 }
-#flavor-form{
-    text-align: left;
-    width: 100%;
-    padding-left: 20rem;
-    padding-right: 20rem;
-}
 
 .item-label {
     float: left;
@@ -82,10 +75,38 @@ border: none
     border: none !important;
 }
 
+.result-item{
+    padding: 2rem;
+    border: 1px solid black;
+    border-radius: 3rem;
+    margin-bottom: 2rem;
+}
+
+#flavor-form{
+    text-align: left;
+    width: 100%;
+    padding-left: 20rem;
+    padding-right: 20rem;
+}
+
 #country-picker {
     overflow: inherit;
     padding-left: 30rem;
 }
+
+#results {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
+    padding: 10rem;
+}
+
+#result-header {
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
 
 
 
