--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -23,9 +23,6 @@
 
 <body>
     <div class="header">
-        <!-- <h1 style="font-size: 55px; font-family:Futura; color: rgb(163, 13, 13)">
-            Travel by Wine
-        </h1> -->
         <br>
     </div>
     <div class="subheader">
@@ -37,7 +34,8 @@
         <div class="main-form">
             <form id="flavor-form" method="GET" action="/search">
 
-                <label class="item-label" for="flavors">I like my wine:
+                <label class="item-label" for="flavors">I like my <a href='aroma_wheel.html' data-toggle="tooltip"
+                        title="Click for more wine descriptors">wine</a>:
                 </label>
                 <span class="item-input">
                     <input id="flavors" name="flavors" type="text">
@@ -61,7 +59,7 @@
                 <h4>{{d.province}} in {{d.country}}</h4>
                 <p>Based on your preferences, you should consider visiting <b>
                         {{d.winery}}</b> and trying their <b>{{d.variety}}</b>.
-                    Here's what one wine reviewer said about this wine:
+                    Wine reviewers describe this wine to have notes of:
                     "{{d.review}}"</p>
             </div>
             {% endfor %}
@@ -84,37 +82,29 @@
             "Earthy"
         ];
         $("#flavors").tagsInput({
-            'autocomplete': {
-                source: availableFlavors
-            }
+            ' autocomplete': { source: availableFlavors }
         });
-
         $(function () {
             $("#flavors_tag").prop("title", "Enter as many of your own descriptors or select as many of the \
-                        suggested descriptors from the dropdown");
+                        suggested descriptors from the dropdown." );
             $("#flavors_tag").tooltip({
                 position: {
-                    my: "right+100 top",
-                    at: "right+100 top",
-                    using: function (position, feedback) {
+                    my: "right+100 top", at: "right+100 top", using: function (position, feedback) {
                         $(this).css(position);
                     }
                 }
             }).off("mouseover mouseout");
+            $('[data-toggle="tooltip"]').tooltip();
         });
-
-        const countries = [
-            'No preference',
-            'Argentina', 'Australia', 'Austria', 'Bulgaria', 'Canada',
-            'Chile', 'Croatia', 'Cyprus', 'England', 'France', 'Georgia',
-            'Germany', 'Greece', 'Hungary', 'India', 'Israel', 'Italy',
-            'Lebanon', 'Macedonia', 'Mexico', 'Moldova', 'Morocco',
-            'New Zealand', 'Portugal', 'Romania', 'Serbia', 'Slovenia',
-            'South Africa', 'Spain', 'Switzerland', 'Turkey', 'US', 'Uruguay'
-        ]
+        const countries = ['No preference'
+            , 'Argentina', 'Australia', 'Austria', 'Bulgaria', 'Canada', 'Chile', 'Croatia', 'Cyprus'
+            , 'England', 'France', 'Georgia', 'Germany', 'Greece', 'Hungary', 'India', 'Israel'
+            , 'Italy', 'Lebanon', 'Macedonia', 'Mexico', 'Moldova', 'Morocco', 'New Zealand'
+            , 'Portugal', 'Romania', 'Serbia', 'Slovenia', 'South Africa', 'Spain', 'Switzerland'
+            , 'Turkey', 'US', 'Uruguay']
 
         $.each(countries, function (index, value) {
-            $('#countries').append($('<option/>', {
+            $('#countries').append($('<option />', {
                 value: value,
                 text: value
             }));
@@ -125,22 +115,7 @@
             $("#country-hidden").val(countries_sel);
         });
 
-        // $(function () {
-        //     console.log($("#data-here").val());
-        // });
-        // $.each($("#data-here"), function (index, value) {
-        //     console.log(value);
-        // if ($("#data-here") == "True") {
-        //     $("#results").append($(
-        //         '<div class="result-item"><img class="wine" src="/static/images/wine_glass.png"/> \
-        //         <h4> ' + value.region + ' in ' + value.country + '</h4 > \
-        //         <p>Based on your preferences, you should consider visiting <b>' +
-        //         value.winery + '</b> and trying their <b>' + value.wine +
-        //         '</b>. Here\'s what one wine reviewer said about this wine: "' +
-        //         value.review + '"</p></div > '
-        //     ))
-        // }
-        // });
+
 
 
 
