--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -66,7 +66,8 @@
             {% endfor %}
             {% endif %}
             {% if data is defined and data == [] %}
-            <h3> We couldn't find anything for that search! Here are some descriptor words to try searching:
+            <h3 style="text-align: 'center'"> We couldn't find anything for that search! Here are some descriptor words
+                to try searching:
                 <a href="aroma_wheel.html">Aroma Wheel</a>
             </h3>
             {% endif %}
